Se agrega hr a cada seccion

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
       </div>
     </section>  
 
-    <section id="Quienes-Somos" class="d-none d-sm-block d-md-block my-5">
+    <section id="Quienes-Somos" class="d-none d-sm-block d-md-block my-5 container">
       <h1 class="text-center text-uppercase fw-bold ">¿quiénes somos?</h1>
-      <div class="container">
+      <hr class="mb-5">
+      <div>
           <div class="row my-5 mx-2">
               <div class="col-12 col-sm-4">
                   <div class="linea">
@@ -98,53 +99,55 @@
      </div>  
     </section>    
 
-    <section id="Destacados" class="my-5">
+    <section id="Destacados" class="my-5 container">
       <h2 class="text-center text-uppercase fw-bold">Destacados</h2>
-      <div class="container">
-          <div class="row">
-              <div class="col-12 col-sm-6 col-md-3 my-4">
-                  <div class="card">
-                      <img src="assets/img/card1.jpg" class="card-img-top" alt="..." height="180">
-                      <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
-                      </div>
-                    </div>                       
-              </div>      
-              <div class="col-12 col-sm-6 col-md-3 my-4">
-                <div class="card">
-                    <img src="assets/img/card2.jpg" class="card-img-top" alt="..." height="180">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
-                        <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
-                    </div>
-                  </div>                        
+      <hr class="mb-5">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3 my-4">
+          <div class="card">
+            <img src="assets/img/card1.jpg" class="card-img-top" alt="..." height="180">
+            <div class="card-body">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 my-4">
-              <div class="card">
-                  <img src="assets/img/card3.jpg" class="card-img-top" alt="..." height="180">
-                  <div class="card-body">
-                      <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
-                  </div>
-                </div>                        
-          </div>        
-          <div class="col-12 col-sm-6 col-md-3 my-4">
-            <div class="card">
-                <img src="assets/img/card4.jpg" class="card-img-top" alt="..." height="180">
-                <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
-                </div>
-            </div>                        
-          </div>
+          </div>                       
+        </div>      
+        <div class="col-12 col-sm-6 col-md-3 my-4">
+          <div class="card">
+            <img src="assets/img/card2.jpg" class="card-img-top" alt="..." height="180">
+            <div class="card-body">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
+              </div>
+          </div>                        
         </div>
-     </div>  
+        <div class="col-12 col-sm-6 col-md-3 my-4">
+          <div class="card">
+            <img src="assets/img/card3.jpg" class="card-img-top" alt="..." height="180">
+            <div class="card-body">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
+            </div>
+          </div>                        
+        </div>        
+        <div class="col-12 col-sm-6 col-md-3 my-4">
+          <div class="card">
+            <img src="assets/img/card4.jpg" class="card-img-top" alt="..." height="180">
+            <div class="card-body">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consequuntur rem maxime voluptatibus libero, magnam architecto. </p>
+            </div>
+         </div>                        
+        </div>
+    </div>
+          
+    
 
     </section>          
 
     <section id="Contacto" class="container my-4">
       <h2 class="text-uppercase text-center fw-bold">contacto</h2>
+      <hr class="mb-5">
       <div class="mb-3 my-4">
           <label for="exampleFormControlInput1" class="form-label">Nombre</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su nombre">
