ultimas modificaciones margenes y otros

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h1 class="text-center text-uppercase fw-bold ">¿quiénes somos?</h1>
       <hr class="mb-5">
       <div>
-          <div class="row my-5 mx-2">
+          <div class="row mx-2">
               <div class="col-12 col-sm-4">
                   <div class="linea">
                       <i class="fa-solid fa-plane"></i>
@@ -139,26 +139,26 @@
             </div>
          </div>                        
         </div>
-    </div>
+     </div>
           
     
 
     </section>          
 
-    <section id="Contacto" class="container my-4">
+    <section id="Contacto" class="container my-5">
       <h2 class="text-uppercase text-center fw-bold">contacto</h2>
       <hr class="mb-5">
-      <div class="mb-3 my-4">
-          <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su nombre">
+      <div class="mb-3">
+        <label for="formulariocontactonombre" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="formulariocontactonombre">
       </div>
       <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+        <label for="formulariocontactoasunto" class="form-label">Asunto</label>
+        <input type="text" class="form-control" id="formulariocontactoasunto">
       </div>
       <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="formulariocontactomensaje" class="form-label">Mensaje</label>
+          <textarea class="form-control" id="formulariocontactomensaje" rows="3"></textarea>
       </div>
       <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Presiona para enviar el mensaje">
         Enviar
